--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,6 @@
 html, body {
     margin: 0;
-    background-color: #FAFAFA;
+    background-color: white;
     overflow-x: hidden;
     max-width: 100%;
     color: #2C2C2C;
